# tidypolars

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
benchmarks/: benchmarks.ipynb
docs/: Makefile  conf.py  example.ipynb  index.md  make.bat  reference.md  requirements.txt
docs/autoapi/: .index.rst.icloud  index.rst
docs/autoapi/tidypolars/: .index.rst.icloud  index.rst
docs/autoapi/tidypolars/funs/: .index.rst.icloud  index.rst
docs/autoapi/tidypolars/lubridate/: .index.rst.icloud  index.rst
docs/autoapi/tidypolars/reexports/: .index.rst.icloud  index.rst
docs/autoapi/tidypolars/stringr/: .index.rst.icloud  index.rst
docs/autoapi/tidypolars/tibble/: .index.rst.icloud
docs/autoapi/tidypolars/tidypolars/: index.rst
docs/autoapi/tidypolars/tidyselect/: .index.rst.icloud  index.rst
tests/: test_expr_funs.py  test_funs.py  test_groupby.py  test_grouped_tibble.py  test_grouped_tidyframe.py  test_lubridate.py  test_stringr.py  test_tibble.py  test_tidyframe.py  test_tidypolars.py  test_tidyselect.py
tidyframe/: __init__.py  tidyframe.py
tidypolars/: __init__.py  docstrings_Tibble.py  docstrings_funs.py  dplyr.py  expr_funs.py  funs.py  lubridate.py  pipe.py  reexports.py  stringr.py  tibble.py  tibble_df.py  tidypolars.py  tidyselect.py  utils.py
tidypolars/docstrings/: __init__.py  ds_Tibble.py
