[tool.poetry]
name = "tidypolars"
version = "0.2.8"
description = "Tidy interface to polars"
authors = ["Mark Fairbanks", "Matt Carlson"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
polars = ">=0.10.27"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
jupyterlab = "^3.1.18"
myst-nb = "^0.13.1"
sphinx-autoapi = "^1.8.4"
sphinx-material = "^0.0.35"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
