[tool.poetry]
name = "tidypolars"
version = "0.3.0"
description = "Tidy interface to polars"
authors = ["Mark Fairbanks", "Matt Carlson"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = ">=1.16.0"
polars = ">=0.20.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
jupyterlab = "^3.1.18"
lxml_html_clean = "^0.2.2"
myst-nb = "^0.13.1"
sphinx-autoapi = "^1.8.4"
sphinx-material = "^0.0.35"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
