[tool.poetry]
name = "tidypolars"
version = "0.3.2"
description = "Tidy interface to polars"
authors = ["Mark Fairbanks"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = ">=1.16.0"
polars = ">=1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=6.2.5"
jupyterlab = ">=3.1.18"
myst-nb = ">=1.1.1"
sphinx-autoapi = ">=3.3.0"
sphinx-material = ">=0.0.35"
sphinx = ">=8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
